--- a/index.html
+++ b/index.html
@@ -4,14 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>De Slimste Kameraad</title>
-
-    <!-- Firebase CDN (Add this to your <head>) -->
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
-
     <script defer>
         document.addEventListener("DOMContentLoaded", () => {
-            // Firebase Config
+            // Firebase configuratie
             const firebaseConfig = {
                 apiKey: "AIzaSyDZT3EHgtrDfDxevE4xy2a-xIS3X7Cegho",
                 authDomain: "de-slimste-kameraad-timer-ppt.firebaseapp.com",
@@ -22,34 +17,26 @@
                 appId: "1:63484640762:web:6541546d615df83c5b7843"
             };
 
-            // Initialize Firebase
-            const app = firebase.initializeApp(firebaseConfig);
-            const database = firebase.database(app);
+            // Firebase importeren
+            import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
+            import { getDatabase, ref, set, onValue } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js";
+            
+            const app = initializeApp(firebaseConfig);
+            const db = getDatabase(app);
 
+            // Referenties naar de Firebase-database
+            const timersRef = ref(db, 'timers');
+            const teamNamesRef = ref(db, 'teamNames');
+            const selectedTimerRef = ref(db, 'selectedTimer');
+
+            // Variabelen voor timers en teamnamen
             let timers = [60, 60, 60, 60];
             let teamNamen = ["Team 1", "Team 2", "Team 3", "Team 4"];
             let intervals = [null, null, null, null];
             let geselecteerdeTimer = 0;
             let zichtbareTimers = [true, true, true, true];
 
-            // Synchronize with Firebase
-            const timersRef = firebase.database().ref('timers');
-            const teamNamesRef = firebase.database().ref('teamNames');
-            const selectedTimerRef = firebase.database().ref('selectedTimer');
-
-            // Synchronize changes to Firebase
-            function syncTimers() {
-                timersRef.set(timers);
-            }
-
-            function syncTeamNames() {
-                teamNamesRef.set(teamNamen);
-            }
-
-            function syncSelectedTimer() {
-                selectedTimerRef.set(geselecteerdeTimer);
-            }
-
+            // Functie om de weergave van de timers bij te werken
             function updateWeergave() {
                 timers.forEach((tijd, index) => {
                     const timerElement = document.getElementById(`timer${index}`);
@@ -59,13 +46,14 @@
 
                     const teamNaamEl = document.getElementById(`team-name-${index}`);
 
+                    // Controleer of het teamnaam element bestaat voordat je verder gaat
                     if (teamNaamEl) {
                         if (teamNaamEl.tagName.toLowerCase() === "input") {
                             let nieuwNaamDiv = document.createElement("div");
                             nieuwNaamDiv.id = `team-name-${index}`;
                             nieuwNaamDiv.classList.add("team-name");
                             nieuwNaamDiv.textContent = teamNamen[index];
-                            nieuwNaamDiv.addEventListener("click", () => maakTeamnaamBewerkbaar(index)); 
+                            nieuwNaamDiv.addEventListener("click", () => maakTeamnaamBewerkbaar(index));
                             teamNaamEl.replaceWith(nieuwNaamDiv);
                         } else {
                             teamNaamEl.textContent = teamNamen[index];
@@ -77,66 +65,91 @@
                 });
             }
 
-            // Timer Functions
+            // Synchroniseer timers met Firebase
+            function syncTimers() {
+                set(timersRef, timers);  // Zet de timerstatus in Firebase
+            }
+
+            // Synchroniseer teamnamen met Firebase
+            function syncTeamNames() {
+                set(teamNamesRef, teamNamen);  // Zet de teamnamen in Firebase
+            }
+
+            // Synchroniseer de geselecteerde timer met Firebase
+            function syncSelectedTimer() {
+                set(selectedTimerRef, geselecteerdeTimer);  // Zet de geselecteerde timer in Firebase
+            }
+
+            // Synchroniseren van wijzigingen van Firebase naar de browser
+            function syncWithFirebase() {
+                onValue(timersRef, (snapshot) => {
+                    const data = snapshot.val();
+                    if (data) {
+                        timers = data;
+                        updateWeergave();
+                    }
+                });
+
+                onValue(teamNamesRef, (snapshot) => {
+                    const data = snapshot.val();
+                    if (data) {
+                        teamNamen = data;
+                        updateWeergave();
+                    }
+                });
+
+                onValue(selectedTimerRef, (snapshot) => {
+                    const data = snapshot.val();
+                    if (data !== undefined) {
+                        geselecteerdeTimer = data;
+                        updateWeergave();
+                    }
+                });
+            }
+
+            // Timer functies
             function startTimer() {
                 if (intervals[geselecteerdeTimer]) return;
                 intervals[geselecteerdeTimer] = setInterval(() => {
                     if (timers[geselecteerdeTimer] > 0) {
                         timers[geselecteerdeTimer]--;
                         updateWeergave();
-                        syncTimers();
+                        syncTimers(); // Synchroniseer elke seconde
                     } else {
-                        stopTimer();
+                        stopTimer(); // Stop de timer als deze op 0 komt
                     }
                 }, 1000);
-                syncSelectedTimer();
+                syncSelectedTimer(); // Synchroniseer geselecteerde timer
             }
 
             function stopTimer() {
                 clearInterval(intervals[geselecteerdeTimer]);
                 intervals[geselecteerdeTimer] = null;
-                syncTimers();
+                syncTimers(); // Synchroniseer de gestopte timer
             }
 
             function resetTimer() {
                 timers = [60, 60, 60, 60];
                 updateWeergave();
-                syncTimers();
+                syncTimers(); // Synchroniseer reset
             }
 
             function pasTijdAan(aantal) {
                 timers[geselecteerdeTimer] = Math.max(0, timers[geselecteerdeTimer] + aantal);
                 updateWeergave();
-                syncTimers();
+                syncTimers(); // Synchroniseer aangepaste tijd
             }
 
-            function toggleTimerZichtbaarheid() {
-                zichtbareTimers[geselecteerdeTimer] = !zichtbareTimers[geselecteerdeTimer];
-                updateWeergave();
-                syncTimers();
-            }
-
-            function stelAangepasteTijdIn() {
-                const invoerSeconden = parseInt(document.getElementById("timeInput").value);
-                if (!isNaN(invoerSeconden) && invoerSeconden >= 0) {
-                    timers[geselecteerdeTimer] = invoerSeconden;
-                    updateWeergave();
-                    syncTimers();
-                } else {
-                    alert("Voer een geldig aantal seconden in (minimaal 0)");
-                }
-            }
-
-            // Timer Selection
+            // Timer selectie
             function selecteerTimer(index) {
                 document.querySelectorAll(".timer").forEach(el => el.classList.remove("selected"));
                 geselecteerdeTimer = index;
                 document.getElementById(`timer-container-${index}`).classList.add("selected");
                 document.getElementById("timerSelect").value = index;
-                syncSelectedTimer();
+                syncSelectedTimer(); // Synchroniseer geselecteerde timer
             }
 
-            // Making Team Name Editable
+            // Teamnaam bewerkbaar maken
             function maakTeamnaamBewerkbaar(index) {
                 let naamLabel = document.getElementById(`team-name-${index}`);
 
@@ -146,8 +159,9 @@
                     inputVeld.value = teamNamen[index];
                     inputVeld.classList.add("team-input");
 
-                    inputVeld.style.fontSize = "30px"; 
-                    inputVeld.style.width = "80%"; 
+                    // Zorg ervoor dat de input hetzelfde blijft qua layout
+                    inputVeld.style.fontSize = "30px";
+                    inputVeld.style.width = "80%";
 
                     naamLabel.replaceWith(inputVeld);
                     inputVeld.focus();
@@ -166,61 +180,116 @@
                     teamNamen[index] = nieuweNaam;
                 }
                 updateWeergave();
-                syncTeamNames();
+                syncTeamNames(); // Synchroniseer de teamnamen
             }
 
-            // Initialize Firebase Sync
-            function syncWithFirebase() {
-                timersRef.on('value', (snapshot) => {
-                    const data = snapshot.val();
-                    if (data) {
-                        timers = data;
-                        updateWeergave();
-                    }
-                });
-
-                teamNamesRef.on('value', (snapshot) => {
-                    const data = snapshot.val();
-                    if (data) {
-                        teamNamen = data;
-                        updateWeergave();
-                    }
-                });
-
-                selectedTimerRef.on('value', (snapshot) => {
-                    const data = snapshot.val();
-                    if (data !== undefined) {
-                        geselecteerdeTimer = data;
-                        updateWeergave();
-                    }
-                });
+            // De zichtbaarheid van de timer omschakelen
+            function toggleTimerZichtbaarheid() {
+                zichtbareTimers[geselecteerdeTimer] = !zichtbareTimers[geselecteerdeTimer];
+                updateWeergave(); // Werk de weergave bij
+                set(timersRef, timers); // Synchroniseer de wijziging met Firebase
             }
 
-            // Event Listeners for buttons
-            document.querySelectorAll(".timer").forEach((el, index) => {
-                el.addEventListener("click", () => selecteerTimer(index));
+            // Initialisatie
+            document.addEventListener("DOMContentLoaded", () => {
+                syncWithFirebase(); // Start de synchronisatie bij het laden van de pagina
+
+                document.querySelectorAll(".timer").forEach((el, index) => {
+                    el.addEventListener("click", () => selecteerTimer(index));
+                });
+
+                document.getElementById("timerSelect").addEventListener("change", (event) => {
+                    selecteerTimer(parseInt(event.target.value));
+                });
+
+                document.getElementById("startBtn").addEventListener("click", startTimer);
+                document.getElementById("stopBtn").addEventListener("click", stopTimer);
+                document.getElementById("resetBtn").addEventListener("click", resetTimer);
+                document.getElementById("toggleBtn").addEventListener("click", toggleTimerZichtbaarheid);
+                document.getElementById("setTimeBtn").addEventListener("click", stelAangepasteTijdIn);
+
+                document.querySelectorAll(".adjust-time").forEach(button => {
+                    button.addEventListener("click", () => pasTijdAan(parseInt(button.dataset.amount)));
+                });
+
+                selecteerTimer(0);
+                updateWeergave();
             });
-
-            document.getElementById("timerSelect").addEventListener("change", (event) => {
-                selecteerTimer(parseInt(event.target.value));
-            });
-
-            document.getElementById("startBtn").addEventListener("click", startTimer);
-            document.getElementById("stopBtn").addEventListener("click", stopTimer);
-            document.getElementById("resetBtn").addEventListener("click", resetTimer);
-            document.getElementById("toggleBtn").addEventListener("click", toggleTimerZichtbaarheid);
-            document.getElementById("setTimeBtn").addEventListener("click", stelAangepasteTijdIn);
-
-            document.querySelectorAll(".adjust-time").forEach(button => {
-                button.addEventListener("click", () => pasTijdAan(parseInt(button.dataset.amount)));
-            });
-
-            selecteerTimer(0);
-            updateWeergave();
-            syncWithFirebase(); // Start sync with Firebase
-
         });
     </script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f5f5f5;
+        }
+        h1 {
+            font-size: 80px;
+        }
+        .timer-container {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-bottom: 20px;
+            flex-wrap: nowrap;
+            overflow-x: auto;
+        }
+        .timer {
+            width: 300px;
+            height: 300px;
+            border: 6px solid white;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            font-size: 70px;
+            font-weight: bold;
+            color: red;
+            background-color: white;
+            border-radius: 20px;
+        }
+        .team-name {
+            font-size: 30px;
+            font-weight: bold;
+            color: black;
+            cursor: pointer;
+            margin-bottom: 20px;
+        }
+        .team-input {
+            font-size: 30px;
+            font-weight: bold;
+            width: 80%;
+            text-align: center;
+            border: none;
+            outline: none;
+        }
+        .controls {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 10px;
+            margin-top: 60px;
+        }
+        .row {
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+            flex-wrap: wrap;
+        }
+        button {
+            background-color: red;
+            color: white;
+            border: none;
+            padding: 10px;
+            font-size: 14px;
+            border-radius: 5px;
+            width: auto;
+            max-width: 120px;
+        }
+        .selected {
+            border: 6px solid red;
+        }
+    </style>
 </head>
 <body>
     <h1>De Slimste Kameraad</h1>
