--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>De Slimste Kameraad</title>
-    <!-- Voeg "type='module'" toe aan je <script> tag -->
-    <script type="module">
+    <!-- Voeg Firebase SDK's toe -->
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
+    <script defer>
         // Firebase configuratie
         const firebaseConfig = {
-            apiKey: "AIzaSyDZT3EHgtrDfDxevE4xy2a-xIS3X7Cegho",
+            apiKey: "AIzaSyDZT3EHgtrDfDxevE4xy2a-xIS3X7Cegho",  // Voeg hier je eigen API-sleutel toe
             authDomain: "de-slimste-kameraad-timer-ppt.firebaseapp.com",
             databaseURL: "https://de-slimste-kameraad-timer-ppt-default-rtdb.europe-west1.firebasedatabase.app",
             projectId: "de-slimste-kameraad-timer-ppt",
@@ -17,19 +19,14 @@
             appId: "1:63484640762:web:6541546d615df83c5b7843"
         };
 
-        // Firebase importeren via de CDN's
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
-        import { getDatabase, ref, set, onValue } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js";
-        
-        const app = initializeApp(firebaseConfig);
-        const db = getDatabase(app);
+        // Firebase initialisatie
+        const app = firebase.initializeApp(firebaseConfig);
+        const db = firebase.database(app);
 
-        // Referenties naar de Firebase-database
-        const timersRef = ref(db, 'timers');
-        const teamNamesRef = ref(db, 'teamNames');
-        const selectedTimerRef = ref(db, 'selectedTimer');
+        const timersRef = db.ref('timers');
+        const teamNamesRef = db.ref('teamNames');
+        const selectedTimerRef = db.ref('selectedTimer');
 
-        // Variabelen voor timers en teamnamen
         let timers = [60, 60, 60, 60];
         let teamNamen = ["Team 1", "Team 2", "Team 3", "Team 4"];
         let intervals = [null, null, null, null];
@@ -48,16 +45,17 @@
 
                 // Controleer of het teamnaam element bestaat voordat je verder gaat
                 if (teamNaamEl) {
+                    // Als de teamnaam een input veld is, vervang het met een div
                     if (teamNaamEl.tagName.toLowerCase() === "input") {
                         let nieuwNaamDiv = document.createElement("div");
                         nieuwNaamDiv.id = `team-name-${index}`;
                         nieuwNaamDiv.classList.add("team-name");
                         nieuwNaamDiv.textContent = teamNamen[index];
-                        nieuwNaamDiv.addEventListener("click", () => maakTeamnaamBewerkbaar(index));
+                        nieuwNaamDiv.addEventListener("click", () => maakTeamnaamBewerkbaar(index)); // Voeg de event listener opnieuw toe
                         teamNaamEl.replaceWith(nieuwNaamDiv);
                     } else {
                         teamNaamEl.textContent = teamNamen[index];
-                        teamNaamEl.addEventListener("click", () => maakTeamnaamBewerkbaar(index));
+                        teamNaamEl.addEventListener("click", () => maakTeamnaamBewerkbaar(index)); // Voeg de event listener toe als deze nog niet bestaat
                     }
                 }
 
@@ -67,22 +65,22 @@
 
         // Synchroniseer timers met Firebase
         function syncTimers() {
-            set(timersRef, timers);  // Zet de timerstatus in Firebase
+            timersRef.set(timers);
         }
 
         // Synchroniseer teamnamen met Firebase
         function syncTeamNames() {
-            set(teamNamesRef, teamNamen);  // Zet de teamnamen in Firebase
+            teamNamesRef.set(teamNamen);
         }
 
         // Synchroniseer de geselecteerde timer met Firebase
         function syncSelectedTimer() {
-            set(selectedTimerRef, geselecteerdeTimer);  // Zet de geselecteerde timer in Firebase
+            selectedTimerRef.set(geselecteerdeTimer);
         }
 
         // Synchroniseren van wijzigingen van Firebase naar de browser
         function syncWithFirebase() {
-            onValue(timersRef, (snapshot) => {
+            timersRef.on('value', (snapshot) => {
                 const data = snapshot.val();
                 if (data) {
                     timers = data;
@@ -90,7 +88,7 @@
                 }
             });
 
-            onValue(teamNamesRef, (snapshot) => {
+            teamNamesRef.on('value', (snapshot) => {
                 const data = snapshot.val();
                 if (data) {
                     teamNamen = data;
@@ -98,7 +96,7 @@
                 }
             });
 
-            onValue(selectedTimerRef, (snapshot) => {
+            selectedTimerRef.on('value', (snapshot) => {
                 const data = snapshot.val();
                 if (data !== undefined) {
                     geselecteerdeTimer = data;
@@ -153,19 +151,25 @@
         function maakTeamnaamBewerkbaar(index) {
             let naamLabel = document.getElementById(`team-name-${index}`);
 
+            // Alleen doorgaan als het element nog niet vervangen is
             if (naamLabel && naamLabel.tagName.toLowerCase() !== "input") {
                 let inputVeld = document.createElement("input");
                 inputVeld.type = "text";
                 inputVeld.value = teamNamen[index];
                 inputVeld.classList.add("team-input");
 
-                inputVeld.style.fontSize = "30px";
-                inputVeld.style.width = "80%";
+                // Zorg ervoor dat de input hetzelfde blijft qua layout
+                inputVeld.style.fontSize = "30px"; // Wijzig de font size naar 30px
+                inputVeld.style.width = "80%"; // Zorg ervoor dat het niet te breed is
 
+                // Vervang de huidige naam door het invoerveld
                 naamLabel.replaceWith(inputVeld);
                 inputVeld.focus();
 
+                // Wanneer het invoerveld verliest focus, sla de nieuwe naam op
                 inputVeld.addEventListener("blur", () => slaNieuweTeamnaamOp(index, inputVeld.value));
+
+                // Wanneer je op enter drukt, sla de nieuwe naam op
                 inputVeld.addEventListener("keydown", (event) => {
                     if (event.key === "Enter") {
                         slaNieuweTeamnaamOp(index, inputVeld.value);
@@ -185,8 +189,8 @@
         // De zichtbaarheid van de timer omschakelen
         function toggleTimerZichtbaarheid() {
             zichtbareTimers[geselecteerdeTimer] = !zichtbareTimers[geselecteerdeTimer];
-            updateWeergave();
-            set(timersRef, timers); // Synchroniseer de wijziging met Firebase
+            updateWeergave(); // Werk de weergave bij zodat de timer zichtbaar of onzichtbaar wordt
+            syncTimers(); // Synchroniseer de wijziging met Firebase
         }
 
         // Initialisatie
@@ -216,11 +220,142 @@
         });
     </script>
     <style>
-        /* Style blijft ongewijzigd */
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f5f5f5;
+        }
+        h1 {
+            font-size: 80px;
+        }
+        .timer-container {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-bottom: 20px;
+            flex-wrap: nowrap;
+            overflow-x: auto;
+        }
+        .timer {
+            width: 300px;
+            height: 300px;
+            border: 6px solid white;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            font-size: 70px;
+            font-weight: bold;
+            color: red;
+            background-color: white;
+            border-radius: 20px;
+        }
+        .team-name {
+            font-size: 30px;
+            font-weight: bold;
+            color: black;
+            cursor: pointer;
+            margin-bottom: 20px;
+        }
+        .team-input {
+            font-size: 30px;
+            font-weight: bold;
+            width: 80%;
+            text-align: center;
+            border: none;
+            outline: none;
+        }
+        .controls {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 10px;
+            margin-top: 60px;
+        }
+        .row {
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+            flex-wrap: wrap;
+        }
+        button {
+            background-color: red;
+            color: white;
+            border: none;
+            padding: 10px;
+            font-size: 14px;
+            border-radius: 5px;
+            width: auto;
+            max-width: 120px;
+        }
+        .selected {
+            border: 6px solid red;
+        }
+        @media (max-width: 768px) {
+            .timer-container {
+                flex-direction: row;
+            }
+            .timer {
+                width: 230px;
+                height: 230px;
+                font-size: 50px;
+            }
+            .team-name {
+                font-size: 18px;
+            }
+            .controls {
+                width: 90%;
+            }
+            button {
+                font-size: 12px;
+            }
+        }
     </style>
 </head>
 <body>
     <h1>De Slimste Kameraad</h1>
-    <!-- Timer containers en controleknoppen blijven zoals ze zijn -->
+    <div class="timer-container">
+        <div class="timer" id="timer-container-0">
+            <div id="team-name-0" class="team-name">Team 1</div>
+            <div id="timer0">60</div>
+        </div>
+        <div class="timer" id="timer-container-1">
+            <div id="team-name-1" class="team-name">Team 2</div>
+            <div id="timer1">60</div>
+        </div>
+        <div class="timer" id="timer-container-2">
+            <div id="team-name-2" class="team-name">Team 3</div>
+            <div id="timer2">60</div>
+        </div>
+        <div class="timer" id="timer-container-3">
+            <div id="team-name-3" class="team-name">Team 4</div>
+            <div id="timer3">60</div>
+        </div>
+    </div>
+
+    <div class="controls">
+        <div class="row">
+            <button id="startBtn">Start</button>
+            <button id="stopBtn">Stop</button>
+            <button id="resetBtn">Reset</button>
+            <button class="adjust-time" data-amount="10">+10 sec</button>
+            <button class="adjust-time" data-amount="20">+20 sec</button>
+            <button class="adjust-time" data-amount="30">+30 sec</button>
+            <button class="adjust-time" data-amount="40">+40 sec</button>
+            <button class="adjust-time" data-amount="50">+50 sec</button>
+            <button class="adjust-time" data-amount="-20">-20 sec</button>
+        </div>
+        <div class="row">
+            <select id="timerSelect">
+                <option value="0">Timer 1</option>
+                <option value="1">Timer 2</option>
+                <option value="2">Timer 3</option>
+                <option value="3">Timer 4</option>
+            </select>
+            <button id="toggleBtn">Zichtbaar ja/nee</button>
+            <input type="number" id="timeInput" placeholder="Voer seconden in">
+            <button id="setTimeBtn">Doorvoeren</button>
+        </div>
+    </div>
 </body>
 </html>
