--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
                 geselecteerdeTimer = index;
                 document.getElementById(`timer-container-${index}`).classList.add("selected");
                 document.getElementById("timerSelect").value = index;
+
+                // Bewaar de geselecteerde timer in Firebase voor synchronisatie
+                const selectedTimerRef = firebase.database().ref('selectedTimer');
+                selectedTimerRef.set(index);
             }
 
             function startTimer() {
@@ -170,24 +174,44 @@
                     team3: timers[2],
                     team4: timers[3]
                 });
+
+                const teamNamesRef = firebase.database().ref('teamNames');
+                teamNamesRef.set({
+                    team1: teamNamen[0],
+                    team2: teamNamen[1],
+                    team3: teamNamen[2],
+                    team4: teamNamen[3]
+                });
             }
 
             function syncTimers() {
                 const timersRef = firebase.database().ref('timers');
                 timersRef.on('value', (snapshot) => {
                     const data = snapshot.val();
-
-                    // Checken of data beschikbaar is
-                    if (data && data.team1 !== undefined && data.team2 !== undefined && data.team3 !== undefined && data.team4 !== undefined) {
+                    if (data) {
                         timers = [data.team1, data.team2, data.team3, data.team4];
                         updateWeergave();
-                    } else {
-                        console.warn('Geen geldige data beschikbaar in Firebase');
+                    }
+                });
+
+                const teamNamesRef = firebase.database().ref('teamNames');
+                teamNamesRef.on('value', (snapshot) => {
+                    const data = snapshot.val();
+                    if (data) {
+                        teamNamen = [data.team1, data.team2, data.team3, data.team4];
+                        updateWeergave();
+                    }
+                });
+
+                const selectedTimerRef = firebase.database().ref('selectedTimer');
+                selectedTimerRef.on('value', (snapshot) => {
+                    const selectedTimer = snapshot.val();
+                    if (selectedTimer !== null) {
+                        selecteerTimer(selectedTimer);
                     }
                 });
             }
 
-            // Functie om de database te initialiseren met standaardwaarden als deze leeg is
             function checkAndInitializeDatabase() {
                 const timersRef = firebase.database().ref('timers');
                 timersRef.once('value', (snapshot) => {
@@ -200,9 +224,29 @@
                         });
                     }
                 });
+
+                const teamNamesRef = firebase.database().ref('teamNames');
+                teamNamesRef.once('value', (snapshot) => {
+                    if (!snapshot.exists()) {
+                        teamNamesRef.set({
+                            team1: "Team 1",
+                            team2: "Team 2",
+                            team3: "Team 3",
+                            team4: "Team 4"
+                        });
+                    }
+                });
+
+                const selectedTimerRef = firebase.database().ref('selectedTimer');
+                selectedTimerRef.once('value', (snapshot) => {
+                    if (!snapshot.exists()) {
+                        selectedTimerRef.set(0);  // Start met timer 0 geselecteerd
+                    }
+                });
             }
 
-            checkAndInitializeDatabase(); // Zorg ervoor dat de database wordt geïnitialiseerd als deze leeg is
+            checkAndInitializeDatabase();
+            syncTimers();
 
             // Event listeners voor timer en knoppen
             document.querySelectorAll(".timer").forEach((el, index) => {
@@ -225,7 +269,6 @@
 
             selecteerTimer(0);
             updateWeergave();
-            syncTimers(); // Start het synchroniseren van de timers
         });
     </script>
     <style>
@@ -242,32 +285,32 @@
             justify-content: center;
             gap: 20px;
             margin-bottom: 20px;
-            flex-wrap: nowrap; /* Zorg ervoor dat de timers naast elkaar blijven */
-            overflow-x: auto; /* Zorg ervoor dat je kunt scrollen als er niet genoeg ruimte is */
+            flex-wrap: nowrap;
+            overflow-x: auto;
         }
         .timer {
-            width: 300px;  /* Vergrote breedte voor timers */
-            height: 300px;  /* Vergrote hoogte voor timers */
+            width: 300px;
+            height: 300px;
             border: 6px solid white;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            font-size: 70px; /* Vergrote tekstgrootte voor timers */
+            font-size: 70px;
             font-weight: bold;
             color: red;
             background-color: white;
             border-radius: 20px;
         }
         .team-name {
-            font-size: 30px;  /* Verander de font size van de teamnaam naar 30px */
+            font-size: 30px;
             font-weight: bold;
             color: black;
             cursor: pointer;
             margin-bottom: 20px;
         }
         .team-input {
-            font-size: 30px;  /* Teamnaam blijft op dezelfde grootte van 30px */
+            font-size: 30px;
             font-weight: bold;
             width: 80%;
             text-align: center;
@@ -294,17 +337,16 @@
             padding: 10px;
             font-size: 14px;
             border-radius: 5px;
-            width: auto; /* Laat de knoppen kleiner worden, maar passen goed in de layout */
-            max-width: 120px; /* Beperk de breedte van de knoppen */
+            width: auto;
+            max-width: 120px;
         }
         .selected {
             border: 6px solid red;
         }
 
-        /* Media query voor kleinere schermen (mobiel) */
         @media (max-width: 768px) {
             .timer-container {
-                flex-direction: row; /* Zorg ervoor dat de timers naast elkaar blijven op kleinere schermen */
+                flex-direction: row;
             }
             .timer {
                 width: 230px;
